--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,7 +134,10 @@ body { background: var(--smoky-black); }
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
-
+.border-me{
+  border: 2px solid  hsl(45, 100%, 72%);;
+  border-radius: 10px;
+}
 .sidebar,
 article {
   background: var(--eerie-black-2);
@@ -736,11 +739,81 @@ main {
 }
 
 
+
 /**
  * skills 
  */
+/* Skills */
+  
+.skill h3 {
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
-.skills-title { margin-bottom: 20px; }
+.skills-title {
+  margin-bottom: 20px;
+}
+
+.skills-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.skills-item {
+  width: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  word-break: break-all;
+}
+
+.skills-item i {
+  font-size: 3rem;
+  color: #feb824;
+}
+
+.skills-item img {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.skills-item h5 {
+  font-weight: 300;
+  text-transform: none;
+}
+
+/* .skill .title-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 8px;
+}
+
+.skill .title-wrapper data {
+  color: var(--light-gray);
+  font-size: var(--fs-7);
+  font-weight: var(--fw-300);
+} */
+
+.skill-progress-bg {
+  background: var(--jet);
+  width: 100%;
+  height: 8px;
+  border-radius: 10px;
+}
+
+.skill-progress-fill {
+  background: var(--text-gradient-yellow);
+  height: 100%;
+  border-radius: inherit;
+}
+
+/* .skills-title { margin-bottom: 20px; }
 
 .skills-list { padding: 20px; }
 
@@ -771,7 +844,7 @@ main {
   background: var(--text-gradient-yellow);
   height: 100%;
   border-radius: inherit;
-}
+} */
 
 /*-----------------------------------*\
   #PORTFOLIO
